tests/kyverno/mandate-10/resources/valid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pm127-valid
  namespace: techx-tf3
spec:
  initContainers:
    - name: init
      image: busybox@sha256:73aaf090f3d85aa34ee199857f03fa3a95c8ede2ffd4cc2cdb5b94e566b11662
  containers:
    - name: app
      image: 197826770971.dkr.ecr.ap-southeast-1.amazonaws.com/techx-corp@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  ephemeralContainers:
    - name: debug
      image: quay.io/prometheus/prometheus@sha256:c0b857aead0d5793aa566adb8f49a9983d6f6031652098759d521a330cfa050f
